tests/templates-updates/template/application/custom-properties/palette.scss
:root {
	/* primary */
	--primary: #164094;
	--primary-0: #000000;
	--primary-10: #02050c;
	--primary-20: #040b19;
	--primary-30: #061025;
	--primary-40: #0b204a;
	--primary-50: #12367c;
	--primary-60: #164094;
	--primary-70: #1f59ce;
	--primary-80: #2467ee;
	--primary-90: #2973ff;
	--primary-95: #2b7fff;
	--primary-98: #308eff;
	--primary-100: #ffffff;

	/* secondary */
	--secondary: #38aae3;
	--secondary-0: #000000;
	--secondary-10: #050e13;
	--secondary-20: #091c26;
	--secondary-30: #0e2b39;
	--secondary-40: #1d5672;
	--secondary-50: #2e8ebe;
	--secondary-60: #38aae4;
	--secondary-70: #4feeff;
	--secondary-80: #59ffff;
	--secondary-90: #65ffff;
	--secondary-95: #71ffff;
	--secondary-98: #7affff;
	--secondary-100: #ffffff;

	//tertiary
	--tertiary: #006496;
	--tertiary-0: #000000;
	--tertiary-10: #00080d;
	--tertiary-20: #001119;
	--tertiary-30: #001926;
	--tertiary-40: #00324b;
	--tertiary-50: #00547e;
	--tertiary-60: #006496;
	--tertiary-70: #008bd3;
	--tertiary-80: #00a1f0;
	--tertiary-90: #00b4ff;
	--tertiary-95: #00c7ff;
	--tertiary-98: #00ddff;
	--tertiary-100: #ffffff;

	//error
	--error: #cc0000;
	--error-0: #000000;
	--error-10: #110000;
	--error-20: #220000;
	--error-30: #330000;
	--error-40: #660000;
	--error-50: #aa0000;
	--error-60: #cc0000;
	--error-70: #ff0000;
	--error-80: #ff0000;
	--error-90: #ff0000;
	--error-95: #ff0000;
	--error-98: #ff0000;
	--error-100: #ffffff;

	//success
	--success: #007e33;
	--success-0: #000000;
	--success-10: #000b04;
	--success-20: #001509;
	--success-30: #00200d;
	--success-40: #003f1a;
	--success-50: #006a2a;
	--success-60: #007e34;
	--success-70: #00b248;
	--success-80: #00ca52;
	--success-90: #00e45b;
	--success-95: #00fc67;
	--success-98: #00ff71;
	--success-100: #ffffff;

	//info
	--info: #0099cc;
	--info-0: #000000;
	--info-10: #000d11;
	--info-20: #001a22;
	--info-30: #002633;
	--info-40: #004d66;
	--info-50: #0080aa;
	--info-60: #009acc;
	--info-70: #00d6ff;
	--info-80: #00f5ff;
	--info-90: #c3e8ff;
	--info-95: #e3f3ff;
	--info-98: #f5faff;
	--info-100: #ffffff;

	//warning
	--warning: #ff8800;
	--warning-0: #000000;
	--warning-10: #150b00;
	--warning-20: #2b1700;
	--warning-30: #402200;
	--warning-40: #804400;
	--warning-50: #d47200;
	--warning-60: #ff8800;
	--warning-70: #ffbe00;
	--warning-80: #ffda00;
	--warning-90: #fff500;
	--warning-95: #ffff00;
	--warning-98: #ffff00;
	--warning-100: #ffffff;
}
